<resources>
    <string name="app_name">CH_PackageInstaller</string>
    <string name="install">Install</string>
    <string name="done">Done</string>
    <string name="security_settings_desc">Allow this application to:</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">Unknown</string>
    <string name="installing">Installing…</string>
    <string name="install_done">Application installed</string>
    <string name="install_confirm_question">Do you want to install this application?</string>
    <string name="install_failed">Application not installed</string>
    <string name="install_failed_invalid_apk">The package appears to be corrupt.</string>
    <string name="install_failed_inconsistent_certificates">An existing package by the same name with a conflicting signature is already installed.</string>
    <string name="install_failed_older_sdk">The package only works on newer versions of Android.</string>
    <string name="install_failed_cpu_abi_incompatible">"This application is not compatible with this stb's CPU."</string>
    <string name="install_failed_file_not_found">The package specified was deleted before installation could be completed.</string>
    <string name="install_failed_verify_failed">The package did not pass verification and cannot be installed.</string>
    <string name="install_failed_verify_timeout">A timeout occurred while trying to verify this package. Please try to install it again later.</string>
    <string name="install_failed_msg">%1$s could not be installed on this stb.</string>
    <string name="launch">Open</string>
    <string name="unknown_apps_dlg_title">Install blocked</string>
    <string name="unknown_apps_dlg_text">For security, your stb is set to block installation of applications not obtained from cmcc Market.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="allow_source_dlg_title">Allow new source for apps?</string>
    <string name="allow_source_dlg_text">"%1$s wants to install other apps.

Allow this now and in the future?"</string>
    <string name="manage_applications">Manage applications</string>
    <string name="dlg_app_replacement_title">Replace application</string>
    <string name="dlg_app_replacement_statement">"The application you are installing will replace another application.

All previous user data will be saved."</string>
    <string name="dlg_sys_app_replacement_statement">"This is a system application. Do you still want to replace it?

All previous user data will be saved."</string>
    <string name="out_of_space_dlg_title">Out of space</string>
    <string name="out_of_space_dlg_text">%1$s could not be installed. Free up some space and try again.</string>
    <string name="dlg_ok">OK</string>
    <string name="app_not_found_dlg_title">Application not found</string>
    <string name="app_not_found_dlg_text">The application was not found in the list of installed applications.</string>
    <string name="uninstall_application_title">Uninstall Application</string>
    <string name="uninstall_update_title">Uninstall Update</string>
    <string name="uninstall_activity_text">%1$s is part of the following application:</string>
    <string name="uninstall_application_text">This application will be uninstalled.</string>
    <string name="uninstall_update_text">The application will be replaced with the factory version.</string>
    <string name="uninstalling">Uninstalling…</string>
    <string name="uninstall_done">Uninstall finished</string>
    <string name="uninstall_failed">Uninstall not successful</string>
    <string name="uninstall_failed_device_policy_manager">Cannot uninstall: this package is an active device administrator.</string>
    <string name="manage_device_administrators">Manage device administrators</string>
    <string name="uninstall_failed_msg">%1$s could not be uninstalled</string>
    <string name="Parse_error_dlg_title">Parse error</string>
    <string name="Parse_error_dlg_text">There is a problem parsing the package.</string>
</resources>
